version/0.9/_sources/examples/gallery_examples/04-analyses/update_solder_fatigue_properties.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\gallery_examples\04-analyses\update_solder_fatigue_properties.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_gallery_examples_04-analyses_update_solder_fatigue_properties.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_04-analyses_update_solder_fatigue_properties.py:


.. _ref_sherlock_update_solder_fatigue_props:

================================
Update Solder Fatigue Properties
================================

This example demonstrates how to connect to the Sherlock gRPC service, import a project,
and update solder fatigue properties.

Description
-----------
This script shows how to configure solder fatigue properties for a PCB assembly.
It performs the following steps:
- Connect to the Sherlock service.
- Import a project.
- Update solder fatigue properties.

For further details, refer to the official documentation on solder fatigue properties in Sherlock.

.. GENERATED FROM PYTHON SOURCE LINES 39-51

.. code-block:: Python



    import os

    from examples.examples_globals import get_sherlock_tutorial_path

    from ansys.sherlock.core import launcher
    from ansys.sherlock.core.errors import (
        SherlockImportProjectZipArchiveError,
        SherlockUpdateSolderFatiguePropsError,
    )


.. GENERATED FROM PYTHON SOURCE LINES 53-56

Connect to Sherlock
===================
Connect to the Sherlock service and ensure proper initialization.

.. GENERATED FROM PYTHON SOURCE LINES 56-59

.. code-block:: Python


    sherlock = launcher.connect(port=9092, timeout=10)


.. GENERATED FROM PYTHON SOURCE LINES 60-63

Delete Project
==============
Delete the project if it already exists.

.. GENERATED FROM PYTHON SOURCE LINES 63-70

.. code-block:: Python


    try:
        sherlock.project.delete_project("Test")
        print("Project deleted successfully.")
    except Exception:
        pass


.. GENERATED FROM PYTHON SOURCE LINES 71-74

Import Tutorial Project
========================
Import the tutorial project zip archive from the Sherlock tutorial directory.

.. GENERATED FROM PYTHON SOURCE LINES 74-85

.. code-block:: Python


    try:
        sherlock.project.import_project_zip_archive(
            project="Test",
            category="Demos",
            archive_file=os.path.join(get_sherlock_tutorial_path(), "Auto Relay Project.zip"),
        )
        print("Tutorial project imported successfully.")
    except SherlockImportProjectZipArchiveError as e:
        print(f"Error importing project zip archive: {e}")


.. GENERATED FROM PYTHON SOURCE LINES 86-89

Update Solder Fatigue Properties
================================
Configure solder fatigue properties for the PCB assembly.

.. GENERATED FROM PYTHON SOURCE LINES 89-107

.. code-block:: Python


    try:
        sherlock.analysis.update_solder_fatigue_props(
            project="Test",
            solder_fatigue_properties=[
                {
                    "cca_name": "Auto Relay",
                    "solder_material": "TIN-LEAD (63SN37PB)",
                    "part_temp": 70,
                    "part_temp_units": "F",
                    "use_part_temp_rise_min": True,
                    "part_validation_enabled": True,
                }
            ],
        )
        print("Solder fatigue properties updated successfully.")
    except SherlockUpdateSolderFatiguePropsError as e:
        print(f"Error updating solder fatigue properties: {e}")


.. _sphx_glr_download_examples_gallery_examples_04-analyses_update_solder_fatigue_properties.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: update_solder_fatigue_properties.ipynb <update_solder_fatigue_properties.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: update_solder_fatigue_properties.py <update_solder_fatigue_properties.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: update_solder_fatigue_properties.zip <update_solder_fatigue_properties.zip>`
